--- a/buildjs.cfg
+++ b/buildjs.cfg
@@ -1,5 +1,7 @@
 [GeoExt.js]
-root = app/static/externals/GeoExt/lib
+root =
+    app/static/externals/GeoExt/lib
+    app/static/externals/PrintPreview/lib
 license = app/static/externals/GeoExt/build/geoext-license.js
 
 first =
@@ -32,6 +34,7 @@ include =
     GeoExt/widgets/VectorLegend.js
     GeoExt/Lang.js
     overrides/override-ext-ajax.js
+    GeoExt.ux/PrintPreview.js
 
 exclude =
     GeoExt.js
@@ -148,6 +151,3 @@ include =
 [ux.js]
 root = app/static/script/ux
 license = license-ext.js
-
-[PrintPreview.js]
-root = app/static/externals/PrintPreview/lib/GeoExt.ux
